# todo_list_django

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django.yml
contrib/: env-sample
todo_list/: settings.py  test_home.py  urls.py
todo_list/tarefas/: apps.py  forms.py  urls.py  views.py
todo_list/tarefas/migrations/: 0001_initial.py
todo_list/tarefas/templates/tarefas/: home.html
todo_list/tarefas/tests/: test_apagar_tarefa.py  test_edicao_de_tarefa.py  test_tarefas_get.py  test_tarefas_post.py
