[tool.poetry]
name = "todo_list_django"
version = "0.1.0"
description = ""
authors = ["Henrique Andrade <henrique.ccda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
gunicorn = "^20.1.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
ipython = "^8.3.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
